third_party/cantp/cantp.h

/* (major << 16) | (minor << 8) | patch */
CANTP_API uint32_t CanTp_Version(void);
/*
 * Load a message definition into a slot (replaces any previous one).
 *   msgDef   CANTP_MSGDEF_COLS doubles
 *   sigDefs  nSig * CANTP_SIGDEF_COLS doubles, row-major; nSig may be 0
 * Returns CANTP_OK or a negative code; on error the slot is left undefined.
 */
CANTP_API int32_t CanTp_Define(int32_t slot,
                               const double* msgDef, int32_t msgDefLen,
                               const double* sigDefs, int32_t nSig);
CANTP_API int32_t CanTp_Clear(int32_t slot);
/* Queries on a defined slot (negative = error). */
CANTP_API int32_t CanTp_SignalCount(int32_t slot);
CANTP_API int32_t CanTp_PayloadLength(int32_t slot);  /* message bytes         */
CANTP_API int32_t CanTp_FrameCount(int32_t slot);     /* frames per Pack        */
CANTP_API int32_t CanTp_OutputSize(int32_t slot);     /* bytes per Pack         */
/*
 * Pack physical values (one per signal row, in row order) into the raw frame
 * records of one complete transport sequence.
 *   NaN value           -> J1939 "not available": all raw bits 1 (float types: NaN)
 *   value outside min/max (when max > min) -> clamped
 *   raw outside the bit width             -> saturated
 * Frame i gets timestamp `timestamp100ns + i * spacing100ns`.
 * out must hold CanTp_OutputSize(slot) bytes; on CANTP_ERR_BUFFER *bytesWritten
 * receives the size needed.
 */
CANTP_API int32_t CanTp_Pack(int32_t slot, const double* values, int32_t nValues,
                             uint64_t timestamp100ns, uint64_t spacing100ns,
                             uint8_t* out, int32_t outLen, int32_t* bytesWritten);
CANTP_API int32_t CanTp_PackSgl(int32_t slot, const float* values, int32_t nValues,
                                uint64_t timestamp100ns, uint64_t spacing100ns,
                                uint8_t* out, int32_t outLen, int32_t* bytesWritten);
/*
 * Stateless decode over a buffer of raw records (a log, or everything one
 * XNET Read returned). Scans from the start, ignores records that do not
 * belong to the slot's message, reassembles a J1939 transport sequence, and
 * on completion writes one physical value per signal row.
 * Returns CANTP_FOUND (1) and *bytesConsumed = offset just past the completing
 * record, CANTP_OK (0) if no complete message is in the buffer, or an error.
 * Call again from *bytesConsumed to find the next one.
 * Identifier matching: exact for 11-bit and for 29-bit with a source address
 * override; for a 29-bit ID with SA placeholder 0xFE (Vector convention) and
 * no override, any source address matches.
 */
CANTP_API int32_t CanTp_Unpack(int32_t slot, const uint8_t* frames, int32_t framesLen,
                               double* values, int32_t nValues, int32_t* bytesConsumed);
/*
 * Stateful decode for live buses: feed one raw record per call (frameLen =
 * that record's size). Returns CANTP_FOUND when the record completed a message
 * (values filled), CANTP_OK otherwise. Reassembly state is per slot; a new
 * TP.CM restarts it; CanTp_RxReset discards it.
 */
CANTP_API int32_t CanTp_RxFeed(int32_t slot, const uint8_t* frame, int32_t frameLen,
                               double* values, int32_t nValues);
CANTP_API int32_t CanTp_RxReset(int32_t slot);
/* ------------------------------------------------------------------------ */
/* Raw record helpers                                                        */
/* ------------------------------------------------------------------------ */
/* Size in bytes of the record starting at `rec` (from its PayloadLength), or
 * CANTP_ERR_RECORD if fewer than 24 bytes are available / length is invalid.
 * Lets a caller walk a U8 array of variable-length records. */
CANTP_API int32_t CanTp_RecordSize(const uint8_t* rec, int32_t avail);
/* 12-byte NI-XNET logfile (.ncl) header, little-endian events. */
CANTP_API int32_t CanTp_NclHeader(uint8_t* out, int32_t outLen);
/* ------------------------------------------------------------------------ */
/* Release 3 (v1.2.0): flattened LabVIEW cluster input, frame-length arrays, */
/* one-call read/write                                                       */
/* ------------------------------------------------------------------------ */
/*
 * CanTp_DefineFlat: define a slot from the bytes LabVIEW's "Flatten To
 * String" produces for one "J1939Msg(V4).ctl" cluster (big-endian, array
 * and string sizes prepended - the defaults), which is also the per-message
 * record inside an Eaton .ecd database (tools/ecdflat.py extracts them).
 * Signal order = channel order in the cluster. Used from the cluster:
 * message ID, extended flag, NumDataBytes, UpdateRate (cycle); per channel
 * start bit, number of bits, data type (0 Signed, 1 Unsigned, 2 IEEE Float),
 * byte order (0 Intel, 1 Motorola), scaling factor, offset, min, max,
 * default. Names, descriptions, units and lookup tables are skipped.
 *   transport  CanTpTransport, or -1 = derive: 11-bit id -> classic (CAN FD
 *              above 8 bytes); 29-bit id -> J1939: transport 1 (single frame
 *              under the PGN up to 8 bytes, BAM above), except a PDU1 PGN
 *              addressed to one node (PS not 0xFF / 0xFE): classic frame with
 *              the id verbatim up to 8 bytes, RTS/CTS above
 *   sa         source address override 0..253, or -1 = the id's low byte
 * Priority and destination come from the id as stored in the cluster; pad is
 * 0xFF for 29-bit ids. Returns CANTP_OK, CANTP_ERR_FLAT when the bytes do not
 * parse, or the CanTp_Define codes. CanTp_FlatSize returns the number of
 * bytes one cluster occupies at the start of `flat` (to walk a flattened
 * array of clusters) or an error.
 */
CANTP_API int32_t CanTp_DefineFlat(int32_t slot, const uint8_t* flat, int32_t flatLen,
                                   int32_t transport, int32_t sa);
/* Read back the definition of a slot as CanTp_Define rows (either pointer may
 * be NULL). Returns the signal count; at most nSigMax rows are written. */
CANTP_API int32_t CanTp_GetDef(int32_t slot, double* msgDef, int32_t msgDefLen,
                               double* sigDefs, int32_t nSigMax);